2023-07-12  Matteo Gianella  <matteo.gianella@polimi.it>

	* src/RSourceTree.h: Code update also in case of protobuf version >= 22.x
	* src/RSourceTree.cpp: Idem
	* src/wrapper_Descriptor: Idem
	* src/wrapper_Message: Idem

2023-03-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.ucrt (CXX_STD): Also set C++17 here

2022-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml (jobs): Update different actions

2022-11-02  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.20
	* configure.ac: Idem
	* configure: Idem

	* src/init.c: Add two 'void' for proper prototypes pleasing clang-15

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
	* .github/workflows/docker.yaml (name): Idem

	* inst/NEWS.Rd: Update on http:// to https://

	* src/Makevars.in (CXX_STD): The compilation standard is now C++17
	* src/Makevars.win (CXX_STD): Idem
	* DESCRIPTION (SystemRequirements): Stated updated requirement

2022-05-06  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.19
	* configure.ac: Idem
	* configure: Idem

2022-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* src/mutators.cpp: Change seven string to std::string

2022-04-06  Michael Chirico  <chiricom@google.com>

	* R/00classes.R: Additional tests and updated changes
	* R/debug_string.R: Idem
	* R/text_format.R: Idem
	* man/Message-class.Rd: Idem
	* inst/tinytest/test_message.R: Idem

2022-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper_Message.cpp: Correct minor issue, reenable compilation
	* inst/tinytest/test_message.R: Park one test temporarily

2022-04-04  Michael Chirico  <chiricom@google.com>

	* R/00classes.R: Expose TextFormat for Message->character conversion
	* R/debug_string.R: Idem
	* R/text_format.R: Idem
	* src/wrapper_Message.cpp: Idem
	* src/init.c: Idem
	* man/Message-class.Rd: Idem