@@ -1,0 +1,28 @@
+## Run CI under Alpine 3.19 to test with much newer Protocol Buffers
+## Cf https://github.com/eddelbuettel/rprotobuf/issues/95
+
+name: alpine
+
+on:
+  push:
+  pull_request:
+  release:
+  workflow_dispatch:
+
+jobs:
+  ci:
+    runs-on: ubuntu-latest
+    container:
+      image: alpine:3.19
+    steps:
+      - uses: actions/checkout@v4
+      - name: System Dependencies
+        run: apk add --no-cache R R-doc R-dev g++ protobuf-dev
+      - name: Session Info
+        run: R -q -e 'sessionInfo()'
+      - name: Package Dependencies
+        run: R -q -e 'install.packages(c("Rcpp", "tinytest"), repos="https://cloud.r-project.org")'
+      - name: Build Package
+        run: R CMD build --no-build-vignettes --no-manual .
+      - name: Check Package
+        run: R CMD check --no-vignettes --no-manual $(ls -1tr *.tar.gz | tail -1)
